--- a/makefile1.txt
+++ b/makefile1.txt
@@ -142,7 +142,7 @@ makefile常见的为目标定义：
 
 make -jN  make的并发执行，N代表并发执行的数量
 makefile里的@符号:
-在cmd前面的@表示取消回显,不显示源命令,加多个和一个效果一样
+在cmd前面的@表示取消回显,不显示源命令,加多个@和一个@效果都是一样的
 $@ 是代表:左边的目标文件
 $(Q)@ 表示什么都不做,等同于注释掉
 
